--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,6 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
+    <img src="/public/logo.png" alt="logo"/>
     <p>{{ site.description }}</p>
   </div>
 
