--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
     <!--
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     -->
-    <a class="sidebar-nav-item" href="#">Sito Web</a>
+    <a class="sidebar-nav-item" href="http://calabriaweatherdata.com">Sito Web</a>
     <span class="sidebar-nav-item">Version v{{ site.version }}</span>
   </nav>
 
